--- a/Action_Detection.ipynb
+++ b/Action_Detection.ipynb
@@ -2660,7 +2660,8 @@
    "outputs": [],
    "source": [
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "#just a comment"
    ]
   },
   {
